Função editar funcionando na tela de cadastro de usuario

--- a/app/src/main/res/layout/content_cadastro_usuario.xml
+++ b/app/src/main/res/layout/content_cadastro_usuario.xml
@@ -67,10 +67,25 @@
         android:ems="10"
         android:id="@+id/edtSenha" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cadastrar"
-        android:id="@+id/btnCadastroUsuario" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cadastrar"
+            android:id="@+id/btnCadastroUsuario"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Editar"
+            android:id="@+id/btnEditarUsuario"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 </LinearLayout>
