--- a/app/src/main/res/layout/activity_lista_usuario.xml
+++ b/app/src/main/res/layout/activity_lista_usuario.xml
@@ -29,6 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_input_add"
+        app:backgroundTint="@color/abc_primary_text_disable_only_material_light"
+        app:backgroundTintMode="multiply" />
 
 </android.support.design.widget.CoordinatorLayout>
