--- a/app/src/main/res/layout/content_lista_usuario.xml
+++ b/app/src/main/res/layout/content_lista_usuario.xml
@@ -16,6 +16,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/lstUsuarios"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
